--- a/contact.html
+++ b/contact.html
@@ -2,135 +2,167 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Flowie</title>
-	<link rel="stylesheet" href="public/styles/styles.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<meta name="viewport" content="initial-scale=1">
+	<link rel="stylesheet" href="public/styles/style.css">
+	<!-- FONT AWESOME -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+	
+	<!-- GOOGLE FONTS -->
+	<!-- font-family: 'Poppins', sans-serif; -->
+	<link href='https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700' rel='stylesheet' type='text/css'>
+
+	<title>Flowie: Contact</title>
 </head>
 <body>
-	<header>
-		<div class="headerUser">
-			<div class="headerUserAccount">
-				<ul>
-					<li><a href="#/">Log In</a></li>
-					<li><a href="#/">Register</a></li>
-					<li><a href="#/">Account</a></li>
-				</ul>
-			</div>
-			<div class="headerUserShop">
-				<ul>
-					<li><a href="#/">USD</a></li>
-					<li><a href="#/">English</a></li>
-					<li><a href="#/">Wishlist</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="headerLogo">
-			<img src="../assets/homepage_logo.png" alt="Flowie logo">
-		</div>
-		<nav>
-			<div class="headerLinks">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li>Women</li>
-					<li>Men</li>
-					<li>Features</li>
-					<li><a href="about.html">Services</a></li>
-					<li>Blog</li>
-					<li><a href="contact.html">Contact</a></li>
-					<li><i class="fa fa-shopping-cart fa-lg" aria-hidden="false"></i></li>
-					<li><i class="fa fa-search fa-lg" aria-hidden="false"></i></li>
-				</ul>
-			</div>
-		</nav>
-		<div class="title title-about">
-			<h2>Contact Us</h2>
-		</div>
-		<div class="breadcrumbs">
-			<div class="midWidthWrapper">
-				<ul>
-					<li>Home</li>
-					<li>Contact Us</li>
-				</ul>
+
+<!-- HEADER -->
+<header>
+
+<!-- navigation -->
+	<nav class="settings">
+		<div class="wrapper">
+			<ul class="top-nav">
+				<li><a href="index.html">home</a></li>
+				<li><a href="about-us.html">about us</a></li>
+				<li><a href="contact.html">contact</a></li>
+				<li><a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
+				<li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+			</ul>
+
+			<!-- HAMBURGER BUTTON! -->
+			<div class="hamburger">
+		    	<i class="fa fa-bars" aria-hidden="true"></i>
 			</div>
 		</div>
-	</header>
+	</nav>
+
+<!-- logo -->
+	<figure class="logo">
+		<img src="assets/homepage_logo.png" alt="flowie logo">
+	</figure>
+<!-- menu -->
+	<nav class="menu">
+		<ul class="wrapper">
+			<li><a href="#">home</a></li>
+			<li><a href="#">women</a></li>
+			<li><a href="#">men</a></li>
+			<li><a href="#">features</a></li>
+			<li><a href="#">services</a></li>
+			<li><a href="#">blog</a></li>
+			<li><a href="#">contact</a></li>
+			<li><a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
+			<li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+		</ul>
+	</nav>
+<!-- banner: about us -->
+	<figure class="banner">
+		<div class="wrapper">
+			<h1>contact</h1>
+		</div>
+	</figure>
+	<nav class="page-flow">
+		<ul class="wrapper">
+			<li><a href="index.html">home</a></li>
+			<li>></li>
+			<li><a href="contact.html">contact</a></li>
+		</ul>
+	</nav>
+</header>
+
+
+<!-- CONTACT -->
+<section class="contact">
+	<figure class="wrapper">
+		<img src="assets/garden-way.jpg" alt="garden way">
+		<div class="contact-details">
+			<div class="contact-item">
+				<img src="assets/contact_icons_02.png" alt="email">
+				<p>fonresupport@gmail.com</p>
+			</div>
+			<div class="contact-item">
+				<img src="assets/contact_icons_03.png" alt="phone">
+				<p>(+84) 987 654 321</p>
+			</div>
+			<div class="contact-item">
+				<img src="assets/contact_icons_01.png" alt="location">
+				<p>no. 54 Joseash Road. 01 Dist. Canada</p>
+			</div>
+		</div>
+	</figure>
+</section>
+
+
+<!-- GET IN TOUCH -->
+<section class="get-in-touch">
+	<figure class="wrapper">
+<!-- map -->
+		<div class="map">
+			<img src="assets/map.jpg" alt="map">
+		</div>
+<!-- contact form -->
+		<div class="contact-form">
+			<form action="">
+				<h2>get in touch</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus ipsum voluptas labore obcaecati magni modi distinctio voluptates neque libero tempore.</p>
+				<label for="name">your name*</label>
+				<input type="text" name="name" id="name" required="true">
+				<label for="email">your email*</label>
+				<input type="email" name="email" id="email" required="true">
+				<label for="message">your message</label>
+				<textarea name="message" id="message"></textarea>
+				<input type="submit" value="send up now">
+			</form>
+		</div>
+
+		
+	</figure>
 	
-	<section class="contactInfo">
-		<div class="contactInfoWrapper midWidthWrapper">
-			<img src="../../assets/garden-way.jpg" alt="garden">
-			<div class="contactBlock">
-				<div class="contactColumn">
-					<img src="../../assets/contact_icon1.jpg" alt="Email us icon">
-					<p>fonresupport@gmail.com</p>
-				</div>
-				<div class="contactColumn">
-					<img src="../../assets/contact_icon2.jpg" alt="Call us icon">
-					<p>(+84) 987 654 321</p>
-				</div>
-				<div class="contactColumn">
-					<img src="../../assets/contact_icon3.png" alt="Location marker icon">
-					<p>No. 54 Joseash Road. 01 Dist. Canada</p>
-				</div>
-			</div>
-		</div>
-	</section>
+</section>
 
-	<section class="map">
-		<div class="mapWrapper midWidthWrapper">
-			<div class="mapItem">
-				<img src="../../assets/map.jpg" alt="Map of Flowie">
-			</div>
-			<div class="mapInfo">
-				<h2>Get in touch</h2>
-				<p>Nulla mattis mi quis elit porttitor gravida. Ut ut laoreet justo. Suspendisse nulla ligula, aliquet sed cursus ut, sodales sit amet metus. </p>
-				<div class="mapForm">
-					<label for="name">Your Name*</label>
-					<input type="text" name="name">
-					<label for="email">Your Email*</label>
-					<input type="text" name="email">
-					<label for="message">Your Message</label>
-					<textarea></textarea>
-					<button class="button buttonGreen">Send us now</button>
-				</div>
-			</div>
-		</div>
-	</section>
 
-	<footer>
-		<div class="footerWrapper midWidthWrapper">
-			<div class="footerColumn footerColumn-Left">
-				<h3>About Us</h3>
-				<img src="../assets/flowie_dark.jpg" alt="Flowie logo">
-				<p> Flowie - I appreciate all the positive feedback. It means a lot.</p>
-				<div class="footerSocial">
-					<i class="fa fa-facebook" aria-hidden="true"></i>
-					<i class="fa fa-twitter" aria-hidden="true"></i>
-					<i class="fa fa-pinterest" aria-hidden="true"></i>
-					<i class="fa fa-youtube-play" aria-hidden="true"></i>
-					<i class="fa fa-instagram" aria-hidden="true"></i>
-				</div>
-			</div>
-			<div class="footerColumn footerColumn-Mid">
-				<h3>Information</h3>
-				<ul>
-					<li>Shipping and Policies</li>
-					<li>Delivery</li>
-					<li>My Account</li>
-					<li>Asked Questions</li>
-					<li>Browse Products</li>
-					<li>Payment &amp; Returns</li>
-				</ul>
-			</div>
-			<div class="footerColumn footerColumn-Right">
-				<h3>Subscribe</h3>
-				<p>© Flowie Wordpress. Site by Zooka.io. All Right Reserved 2015.</p>
-				<div class="footerForm">
-					<input type="text" placeholder="Your email">
-					<button class="button buttonYellow">Send Us</button>
-				</div>
-			</div>
+
+<!-- FOOTER -->
+<footer>
+	<figure class="wrapper">
+<!-- aboutus -->
+		<div class="footnote">
+			<h5>about us</h5>
+			<img src="assets/flowie_dark.jpg" alt="logo">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, recusandae.</p>
+			<ul class="social">
+				<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+				<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+				<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+				<li><a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+				<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+			</ul>
 		</div>
-	</footer>
+<!-- information -->
+		<div class="footnote">
+			<h5>information</h5>
+			<ul class="information">
+				<li><a href="#">Shipping and Policies</a></li>
+				<li><a href="#">Delivery</a></li>
+				<li><a href="#">My Account</a></li>
+				<li><a href="#">Asked Questions</a></li>
+				<li><a href="#">Browse Products</a></li>
+				<li><a href="#">Payment & Returns</a></li>
+			</ul>
+		</div>
+<!-- subscribe -->
+		<div class="footnote">
+			<h5>subscribe</h5>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, recusandae.</p>
+			<form action="" class="subscribe">
+				<input type="email" placeholder="Your Email">
+				<input type="submit" value="send us">
+			</form>
+		</div>
+	</figure>
+</footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="public/scripts/main.js"></script>
+
 </body>
 </html>
